exports[`Header renders default if no override 1`] = `
<h4
  className="text-center">
  Billing Address
</h4>
`;

exports[`Header renders override if override 1`] = `
<span>
  meow
</span>
`;

exports[`Layout renders US by default 1`] = `
<div>
  <div
    className="push-double@lap-and-up push">
    <span>
      header
    </span>
  </div>
  <span>
    child
  </span>
  <div
    className="soft-sides">
    <div
      className="input input--active"
      data-spec="input-wrapper"
      style={Object {}}>
      <label
        htmlFor="streetAddress"
        style={Object {}}>
        Street Address
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className={undefined}
        data-lpignore={undefined}
        data-spec="input"
        defaultValue="123 Some St."
        disabled={undefined}
        id="streetAddress"
        maxLength=""
        name="streetAddress"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Street Address"
        readOnly={undefined}
        spellCheck={undefined}
        style={Object {}}
        type={undefined} />
    </div>
    <div
      className="input input--active"
      data-spec="input-wrapper"
      style={Object {}}>
      <label
        htmlFor="streetAddress2"
        style={Object {}}>
        Street Address (optional)
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className={undefined}
        data-lpignore={undefined}
        data-spec="input"
        defaultValue="Apt. 1"
        disabled={undefined}
        id="streetAddress2"
        maxLength=""
        name="streetAddress2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Street Address (optional)"
        readOnly={undefined}
        spellCheck={undefined}
        style={Object {}}
        type={undefined} />
    </div>
    <div
      className="input input--active select_15p0e27">
      <label
        htmlFor="Country"
        style={undefined}>
        Country
      </label>
      <select
        className={undefined}
        defaultValue="US"
        disabled={undefined}
        id="Country"
        name="country"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Country">
        <option
          style={
            Object {
              "display": "none",
            }
          }>
          
        </option>
        <option
          className={undefined}
          value={undefined} />
        <option
          className={undefined}
          value={undefined} />
      </select>
    </div>
    <div
      className="input input--active"
      data-spec="input-wrapper"
      style={Object {}}>
      <label
        htmlFor="city"
        style={Object {}}>
        City
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className={undefined}
        data-lpignore={undefined}
        data-spec="input"
        defaultValue="Someville"
        disabled={undefined}
        id="city"
        maxLength=""
        name="city"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="City"
        readOnly={undefined}
        spellCheck={undefined}
        style={Object {}}
        type={undefined} />
    </div>
    <div
      className="grid">
      <div
        className="grid__item one-half">
        <div
          className="input input--active select_15p0e27">
          <label
            htmlFor="State/Territory"
            style={undefined}>
            State/Territory
          </label>
          <select
            className={undefined}
            defaultValue="SC"
            disabled={undefined}
            id="State/Territory"
            name="state"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="State/Territory">
            <option
              style={
                Object {
                  "display": "none",
                }
              }>
              
            </option>
            <option
              className={undefined}
              value={undefined} />
            <option
              className={undefined}
              value={undefined} />
          </select>
        </div>
      </div>
      <div
        className="grid__item one-half">
        <div
          className="input"
          data-spec="input-wrapper"
          style={Object {}}>
          <label
            htmlFor="zip"
            style={Object {}}>
            Zip/Postal
          </label>
          <input
            autoCapitalize="off"
            autoComplete="off"
            autoCorrect="off"
            className={undefined}
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id="zip"
            maxLength=""
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Zip/Postal"
            readOnly={undefined}
            spellCheck={undefined}
            style={Object {}}
            type={undefined} />
        </div>
      </div>
    </div>
  </div>
  <div>
    <a
      className="btn--small btn--dark-tertiary display-inline-block"
      href=""
      onClick={[Function]}
      tabIndex={-1}>
      Back
    </a>
    <button
      className=" push-left btn"
      disabled={false}
      onClick={[Function]}
      type="submit">
      Next
    </button>
  </div>
</div>
`;

exports[`Layout renders your country instead 1`] = `
<div>
  <div
    className="push-double@lap-and-up push">
    <span>
      header
    </span>
  </div>
  <span>
    child
  </span>
  <div
    className="soft-sides">
    <div
      className="input input--active"
      data-spec="input-wrapper"
      style={Object {}}>
      <label
        htmlFor="streetAddress"
        style={Object {}}>
        Street Address
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className={undefined}
        data-lpignore={undefined}
        data-spec="input"
        defaultValue="123 Some St."
        disabled={undefined}
        id="streetAddress"
        maxLength=""
        name="streetAddress"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Street Address"
        readOnly={undefined}
        spellCheck={undefined}
        style={Object {}}
        type={undefined} />
    </div>
    <div
      className="input input--active"
      data-spec="input-wrapper"
      style={Object {}}>
      <label
        htmlFor="streetAddress2"
        style={Object {}}>
        Street Address (optional)
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className={undefined}
        data-lpignore={undefined}
        data-spec="input"
        defaultValue="Apt. 1"
        disabled={undefined}
        id="streetAddress2"
        maxLength=""
        name="streetAddress2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Street Address (optional)"
        readOnly={undefined}
        spellCheck={undefined}
        style={Object {}}
        type={undefined} />
    </div>
    <div
      className="input input--active select_15p0e27">
      <label
        htmlFor="Country"
        style={undefined}>
        Country
      </label>
      <select
        className={undefined}
        defaultValue="CA"
        disabled={undefined}
        id="Country"
        name="country"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Country">
        <option
          style={
            Object {
              "display": "none",
            }
          }>
          
        </option>
        <option
          className={undefined}
          value={undefined} />
        <option
          className={undefined}
          value={undefined} />
      </select>
    </div>
    <div
      className="input input--active"
      data-spec="input-wrapper"
      style={Object {}}>
      <label
        htmlFor="city"
        style={Object {}}>
        City
      </label>
      <input
        autoCapitalize="off"
        autoComplete="off"
        autoCorrect="off"
        className={undefined}
        data-lpignore={undefined}
        data-spec="input"
        defaultValue="Someville"
        disabled={undefined}
        id="city"
        maxLength=""
        name="city"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="City"
        readOnly={undefined}
        spellCheck={undefined}
        style={Object {}}
        type={undefined} />
    </div>
    <div
      className="grid">
      <div
        className="grid__item one-half">
        <div
          className="input input--active select_15p0e27">
          <label
            htmlFor="State/Territory"
            style={undefined}>
            State/Territory
          </label>
          <select
            className={undefined}
            defaultValue="SC"
            disabled={undefined}
            id="State/Territory"
            name="state"
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="State/Territory">
            <option
              style={
                Object {
                  "display": "none",
                }
              }>
              
            </option>
            <option
              className={undefined}
              value={undefined} />
            <option
              className={undefined}
              value={undefined} />
          </select>
        </div>
      </div>
      <div
        className="grid__item one-half">
        <div
          className="input"
          data-spec="input-wrapper"
          style={Object {}}>
          <label
            htmlFor="zip"
            style={Object {}}>
            Zip/Postal
          </label>
          <input
            autoCapitalize="off"
            autoComplete="off"
            autoCorrect="off"
            className={undefined}
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id="zip"
            maxLength=""
            name="zip"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Zip/Postal"
            readOnly={undefined}
            spellCheck={undefined}
            style={Object {}}
            type={undefined} />
        </div>
      </div>
    </div>
  </div>
  <div>
    <a
      className="btn--small btn--dark-tertiary display-inline-block"
      href=""
      onClick={[Function]}
      tabIndex={-1}>
      Back
    </a>
    <button
      className=" push-left btn"
      disabled={false}
      onClick={[Function]}
      type="submit">
      Next
    </button>
  </div>
</div>
`;

exports[`NextButton renders disabled styles when no city 1`] = `
<button
  className=" push-left btn--disabled"
  disabled={true}
  onClick={[Function]}
  type="submit">
  Next
</button>
`;

exports[`NextButton renders disabled styles when no streetAddress 1`] = `
<button
  className=" push-left btn--disabled"
  disabled={true}
  onClick={[Function]}
  type="submit">
  Next
</button>
`;

exports[`NextButton renders enabled styles when billing information present 1`] = `
<button
  className=" push-left btn"
  disabled={false}
  onClick={[Function]}
  type="submit">
  Next
</button>
`;
